force-app/main/default/objects/CAMS_Check__c/CAMS_Check__c.object-meta.xml
<CustomObject>
    <label>CAMS Queue</label>
    <nameField>
        <displayFormat>CAMS-{00000000}</displayFormat>
        <label>Unique Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAMS Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>