force-app/main/default/objects/CAMS_Check__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>CAMS Checks</relationshipLabel>
    <relationshipName>CAMS_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>