force-app/main/default/objects/CAMS_Check__c/fields/CAMS_PEP_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CAMS_PEP_Indicator__c</fullName>
    <inlineHelpText>To clear a pep, the user needs to tell the system if the cams should be called with a pep indicator of true or false.</inlineHelpText>
    <label>CAMS PEP Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>