force-app/main/default/objects/CAMS_Check__c/fields/Confirmed_PEP__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed PEP?</label>
    <type>Checkbox</type>
</CustomField>