force-app/main/default/objects/CAMS_Check__c/fields/Customer_LE_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_LE_Type__c</fullName>
    <defaultValue>&apos;PLC&apos;</defaultValue>
    <label>Customer LE Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_LE_Type</valueSetName>
    </valueSet>
</CustomField>