force-app/main/default/objects/CAMS_Check__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <defaultValue>&quot;face-to-face&quot;</defaultValue>
    <label>Distribution Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>