force-app/main/default/objects/CAMS_Check__c/fields/Dll_Country__c.field-meta.xml
<CustomField>
    <fullName>Dll_Country__c</fullName>
    <defaultValue>&#39;W&#39;</defaultValue>
    <label>Dll Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>DSM</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>