force-app/main/default/objects/CAMS_Check__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <defaultValue>&apos;US&apos;</defaultValue>
    <label>Geography</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>