force-app/main/default/objects/CAMS_Check__c/fields/Lease_Signer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Signer_First_Name__c</fullName>
    <formula>Application__r.Contract_Signer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Signer First Name</label>
    <type>Text</type>
</CustomField>