force-app/main/default/objects/CAMS_Check__c/fields/Lease_Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Lease_Signer_Title__c</fullName>
    <formula>Application__r.Contract_Signer_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Signer Title</label>
    <type>Text</type>
</CustomField>