force-app/main/default/objects/CAMS_Check__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>CAMS Checks</relationshipLabel>
    <relationshipName>CAMS_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>