force-app/main/default/objects/CAMS_Check__c/fields/Missing_Data__c.field-meta.xml
<CustomField>
    <fullName>Missing_Data__c</fullName>
    <formula>or(isBLANK(Account_Number__c),isblank(  Application__c),  isblank( TEXT(Customer_LE_Type__c) ), isblank( Customer_Name__c),  isblank( TExt(Customer_Type__c) ), isblank( Distribution_Channel__c),  isblank( text(Dll_Country__c)),  isblank(text(Geography__c)),  isblank( Lease_Signer_First_Name__c),  isblank( Lease_Signer_Last_Name__c),  isblank( Lease_Signer_Title__c),  isblank( NAICS__c),    isblank( Source_System__c),  isblank( Transaction_Amount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Data</label>
    <type>Checkbox</type>
</CustomField>