force-app/main/default/objects/CAMS_Check__c/fields/NAICS__c.field-meta.xml
<CustomField>
    <fullName>NAICS__c</fullName>
    <label>NAICS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>