force-app/main/default/objects/CAMS_Check__c/fields/Product_Risk__c.field-meta.xml
<CustomField>
    <fullName>Product_Risk__c</fullName>
    <defaultValue>&#39;Lease&#39;</defaultValue>
    <label>Product Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLB</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Asset Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>