force-app/main/default/objects/CAMS_Check__c/fields/Publicly_Traded__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Traded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publicly Traded?</label>
    <type>Checkbox</type>
</CustomField>