force-app/main/default/objects/CAMS_Check__c/fields/Publicly_Traded_Full_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Traded_Full_Subsidiary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publicly Traded Full Subsidiary</label>
    <type>Checkbox</type>
</CustomField>