force-app/main/default/objects/CAMS_Check__c/fields/Quick_Quote__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quick Quote</label>
    <referenceTo>genesis__Quick_Quotes__c</referenceTo>
    <relationshipLabel>CAMS Checks</relationshipLabel>
    <relationshipName>CAMS_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>