force-app/main/default/objects/CAMS_Check__c/fields/Response_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Response_Case_Number__c</fullName>
    <label>Response Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>