force-app/main/default/objects/CAMS_Check__c/fields/Response_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Response_Diligence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Diligence</label>
    <type>Checkbox</type>
</CustomField>