force-app/main/default/objects/CAMS_Check__c/fields/Response_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Response_Risk_Rating__c</fullName>
    <label>Response Risk Rating</label>
    <length>1</length>
    <type>Text</type>
</CustomField>