force-app/main/default/objects/CAMS_Check__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <defaultValue>&quot;CLND&quot;</defaultValue>
    <label>Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>