force-app/main/default/objects/CAMS_Check__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Auto Cleared</fullName>
            </value>
            <value>
                <fullName>Held - Medium</fullName>
            </value>
            <value>
                <fullName>Held - High</fullName>
            </value>
            <value>
                <fullName>Held - Data Issue</fullName>
            </value>
            <value>
                <fullName>Manually Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>