force-app/main/default/objects/CAMS_Check__c/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <formula>Application__r.genesis__Financed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>