force-app/main/default/objects/CAMS_Check__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trust?</label>
    <type>Checkbox</type>
</CustomField>