force-app/main/default/objects/CAMS_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CAMS_PEP_Indicator__c</columns>
    <columns>Confirmed_PEP__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>