force-app/main/default/objects/CAMS_Check__c/listViews/CAMS_History_CAMS_Check.listView-meta.xml
<ListView>
    <fullName>CAMS_History_CAMS_Check</fullName>
    <filterScope>Queue</filterScope>
    <label>CAMS History</label>
    <queue>CAMS_History</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>