force-app/main/default/objects/CAMS_Check__c/listViews/CAMS_History_Q.listView-meta.xml
<ListView>
    <fullName>CAMS_History_Q</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quick_Quote__c</columns>
    <columns>Application__c</columns>
    <columns>LS_Contract__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>CAMS History Q</label>
    <queue>CAMS_History</queue>
</ListView>