force-app/main/default/objects/CAMS_Check__c/listViews/CAMS_Queue_CAMS_Check.listView-meta.xml
<ListView>
    <fullName>CAMS_Queue_CAMS_Check</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>LS_Contract__c</columns>
    <columns>Quick_Quote__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Number__c</columns>
    <filterScope>Queue</filterScope>
    <label>CAMS Queue</label>
    <queue>CAMS_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>