force-app/main/default/objects/CAMS_Check__c/listViews/My_CAMS.listView-meta.xml
<ListView>
    <fullName>My_CAMS</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My CAMS</label>
</ListView>